--- a/source/scss/_blocks/title.scss
+++ b/source/scss/_blocks/title.scss
@@ -1,10 +1,3 @@
 .servises__title {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 50px;
-    text-transform: uppercase;
-    color: #00559D;
-    text-align: center;
-    margin-bottom: 50px;
+  @include mont
   }
