--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -23,6 +23,5 @@ $media-desktop: 1200px;
 /*
 * Colors
 */
-
-$color-bg: #fff;
-$color-text: #151515;
+$link-color: #008752;
+$color-title: #00559D;
