--- a/source/scss/_blocks/link.scss
+++ b/source/scss/_blocks/link.scss
@@ -1,7 +1,7 @@
 .link {
     padding: 11px 40px;
     color: #FFFFFF;
-    background: #008752;
+    background: $link-color;
     text-transform: uppercase;
     max-width: max-content;
 }
