--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -23,6 +23,7 @@
 @import "_blocks/header";
 @import "_blocks/footer";
 @import "_blocks/link";
+@import "_blocks/button";
 
 /*
   Ниже пример подключения других блоков
@@ -48,128 +49,103 @@
   background-repeat: no-repeat;
   background-color: #E0E7ED;
   padding: 143px 0 286px;
+  &__title {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 90px;
+    line-height: 100%;
+    color: #00559D;
+    max-width: 765px;
+  }
 }
 
-.banner__title {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 90px;
-  line-height: 100%;
-  color: #00559D;
-  max-width: 765px;
-}
-
-.banner__btn {
-  font-weight: 900;
-  padding: 17px 58px;
-  background: #95459A;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  font-size: 24px;
-  border: none;
-  margin-top: 40px;
-  cursor: pointer;
-}
-
-.services {
+.servises {
   margin-top: 80px;
-}
-
-.servises__list-img {
-  margin-bottom: 19px;
-}
-
-
-.servises__list-item {
-  display: flex;
-  flex-direction: column;
-  max-width: 280px;
-  row-gap: 20px;
-}
-
-.servises__list-title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  color: #2C3036;
-  max-width: 170px;
-}
-
-.servises__list-desc {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
-  color: #2C3036;
+  &__list {
+    display: flex;
+    column-gap: 20px;
+    row-gap: 20px;
+    margin-bottom: 110px;
+    flex-wrap: wrap;
+    &-item {
+      display: flex;
+      flex-direction: column;
+      max-width: 280px;
+      row-gap: 20px;
+    }
+    &-img {
+      margin-bottom: 19px;
+    }
+    &-title {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 30px;
+      line-height: 36px;
+      color: #2C3036;
+      max-width: 170px;
+    }
+    &-desc {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 21px;
+      color: #2C3036;
+    }
+  }
 }
 
 .delivery {
   display: flex;
   column-gap: 120px;
-}
-
-.background {
-  background-color: #E1F0F7;
-}
-
-.delivery__list {
-  margin-top: -35px;
-  max-width: 480px;
-}
-
-.banner-test__wrapper {
-  display: flex;
-}
-
-.servises__list {
-  display: flex;
-  column-gap: 20px;
-  row-gap: 20px;
-  margin-bottom: 110px;
-  flex-wrap: wrap;
+  &__list {
+    margin-top: -35px;
+    max-width: 480px;
+  }
 }
 
 .about {
   display: flex;
   column-gap: 120px;
   position: relative;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    max-width: 480px;
+    &-title {
+      margin-bottom: 46px;
+      max-width: 401px;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 42px;
+      line-height: 50px;
+      text-transform: uppercase;
+      color: #00559D;
+    }
+  }
+  &__text {
+    max-width: 480px;
+    margin-bottom: 20px;
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 570px;
+    height: 477px;
+    right: -70px;
+    bottom: -60px;
+    background: #008752;
+    z-index: 5;
+  }
+  &__img {
+    z-index: 15;
+  }
 }
 
-.about__list {
-  display: flex;
-  flex-direction: column;
-  max-width: 480px;
-}
-
-.about__list-title {
-  margin-bottom: 46px;
-  max-width: 401px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 50px;
-  text-transform: uppercase;
-  color: #00559D;
-}
-
-.about__text {
-  max-width: 480px;
-  margin-bottom: 20px;
-}
-
-.about::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 570px;
-  height: 477px;
-  right: -70px;
-  bottom: -60px;
-  background: #008752;
-  z-index: 5;
-}
-
-.about__img {
-  z-index: 15;
+.awards {
+  margin-top: 180px;
+  &__list {
+    display: flex;
+    column-gap: 46px;
+  }
 }
