--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -1,9 +1,12 @@
 .header {
+    position: relative;
+    overflow: hidden;
     display: flex;
     align-items: center;
     margin-top: 33px;
     margin-bottom: 33px;
     &__list {
+
         display: flex;
         align-items: center;
         margin-right: auto;
@@ -28,10 +31,42 @@
             color: #95459A;
         }
         &-link--contact {
+            position: absolute;
+            top: 8%;
+            right: -1010px;
             padding: 11px 40px;
             color: #FFFFFF;
             background: #008752;
             text-transform: uppercase;
+            transition: 0.4s;
+            transform: translate(-30px, 45px);
+            animation: contact 10s infinite linear;
+            &:hover {
+                opacity: 0.7;
+            }
         }
     }
+}
+
+@keyframes contact {
+    0% {
+        right: 1100px;
+        rotate: (90deg);
+        transform: translate(-100px, -205px);
+    }
+    100% {
+        right: 10px;
+        rotate: (180deg);
+        transform: translate(-10px, -25px);
+    }
+}
+
+.logo{
+    transition: 0.4s;
+    &:hover {
+        opacity: 0.7;
+}   
+    &:active {
+    opacity: 0.4;
+}
 }
