--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -41,6 +41,86 @@
   Не стал выносить в отдельный файл, но если бы блок coming-soon действительно был бы нужен,
   то он должен был бы быть в файле _blocks/coming-soon.scss
 */
+
+.chat {
+  background: #FFFFFF;
+  width: 300px;
+  height: 480px;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.35);
+  position: fixed;
+  z-index: 50;
+  overflow: hidden;
+  &__head {
+    background: #F6F6F8;
+    padding: 15px;
+    border: #BCBCBE 1px solid;
+  }
+  &__title {
+    color: #27253F;
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  &__subtitle {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #6B6A6A;
+  }
+  &__message {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 80%;
+    &-content {
+      max-height: 0;
+      animation: chat 5s forwards;
+      @for $i from 1 through 5 {
+        &:nth-child(#{$i}) {
+          animation-delay: $i + 1s;
+        }
+      }
+    }
+    &-right {
+      background: #2198F4;
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: #FFFFFF;
+      padding: 8px 10px 8px 10px;
+      margin: 0 15px 15px auto;
+      max-width: 180px;
+    }
+    &-left {
+      background: #E4E3E8;
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: #27253F;
+      max-width: 177px;
+      padding: 8px 10px 8px 10px;
+    }
+  }
+}
+
+@keyframes chat {
+  0% {
+    max-height: 0%;
+  }
+
+  100% {
+    max-height: 100%;
+  }
+}
+
 .banner {
   position: relative;
   background-image: url(../img/banner.jpg);
