--- a/source/scss/_blocks/button.scss
+++ b/source/scss/_blocks/button.scss
@@ -8,4 +8,7 @@
     border: none;
     margin-top: 40px;
     cursor: pointer;
+    @media screen and (max-width: 850px) {
+        margin-top: 87px;
+    }
 }
