--- a/source/scss/_blocks/link.scss
+++ b/source/scss/_blocks/link.scss
@@ -4,4 +4,8 @@
     background: $link-color;
     text-transform: uppercase;
     max-width: max-content;
+    @media screen and (max-width: 850px) {
+        padding: 10px 18px;
+        font-size: 14px;
+    }
 }
