--- a/source/scss/_mixins.scss
+++ b/source/scss/_mixins.scss
@@ -7,4 +7,7 @@
   color: $color-title;
   text-align: center;
   margin-bottom: 50px;
+  @media screen and (max-width: 850px) {
+    margin-top: 70px;
+  }
 }
