--- a/source/scss/_blocks/link.scss
+++ b/source/scss/_blocks/link.scss
@@ -8,4 +8,12 @@
         padding: 10px 18px;
         font-size: 14px;
     }
+    &:hover {
+        text-decoration-line: underline;
+        text-decoration-color: #cc3434;
+    }
+    &:active {
+        text-decoration-line: underline;
+        text-decoration-color: #000000;
+    }
 }
