--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -4,7 +4,7 @@
   /></a>
   <ul class="header__list">
     <li class="header__list-item">
-      <a class="header__list-link" href="#">Catalog</a>
+      <a class="header__list-link" href="./catalog.html">Catalog</a>
     </li>
     <li class="header__list-item">
       <a class="header__list-link" href="#">Servises</a>
