--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -17,6 +17,7 @@
 */
 @import "_blocks/container";
 @import "fonts";
+@import "bootstrap";
 @import "catalog";
 @import "contact";
 @import "popup";
