--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -44,6 +44,71 @@
   то он должен был бы быть в файле _blocks/coming-soon.scss
 */
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(6, 150px);
+  @media (max-width: 768px) {    
+    grid-template-rows: repeat(9, 150px);
+  }
+  &__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__box1 {
+    background: #A322F1;
+    grid-column: 1/7;
+    grid-row: 1/3;
+    @media (max-width: 768px) {    
+      grid-column: 8/13;
+    }
+  }
+  &__box2 {
+    background: #C4C4C4;
+    grid-column: 7/13;
+    grid-row: 1/3;
+    @media (max-width: 768px) {    
+      grid-column: 1/8;
+    }
+  }
+  &__box3 {
+    background: #22CCF1;
+    grid-column: 1/3;
+    grid-row: 3/4;
+    @media (max-width: 768px) {    
+      grid-column: 6/13;
+    }
+  }
+  &__box4 {
+    background: #F19E22;
+    grid-column: 3/9;
+    grid-row: 3/4;
+    @media (max-width: 768px) {    
+      grid-column: 6/13;
+      grid-row: 4/6;
+    }
+  }
+  &__box5 {
+    background: #EF6A6A;
+    grid-column: 9/13;
+    grid-row: 3/10;
+    @media (max-width: 768px) {    
+      grid-column: 1/6;
+      grid-row: 3/6;
+    }
+  }
+  &__box6 {
+    background: #008752;
+    grid-column: 1/9;
+    grid-row: 4/10;
+    @media (max-width: 768px) {    
+      grid-column: 1/13;
+      grid-row: 6/10;
+    }
+  }
+}
+
 // .svg {
 //   position: absolute;
 //   top: 50%;
